<resources>
    <string name="app_name">BankAccounts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_banks">Banks</string>
    <string name="add_account">Add Account</string>
    <string name="bank">Bank</string>
    <string name="account_holder">Account Holder</string>
    <string name="account_number">Account Number</string>
    <string name="save">Save</string>
    <string name="bank_logo">Bank Logo</string>
    <string name="accounts">Accounts</string>
    <string name="more">More</string>
    <string name="bagikan">Bagikan</string>
    <string name="salin_nomor">Salin Nomor</string>
    <string name="salin_lengkap">Salin Lengkap</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="title_favorites">Module Title</string>
    <string name="favorites">Favorites</string>
    <string name="select_bank">Select Bank</string>
    <string name="fill_bank_info">Fill Bank Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="transfer_code_text">Transfer code: %1$s</string>
    <string name="title_bankfavorite">Bank Favorites</string>
    <string name="banks_favorite">Banks Favorite</string>
    <string name="add_bank">Add Bank</string>
    <string name="no_bank_selected">No Bank Selected.</string>
    <string name="update_bank">Update Bank</string>
    <string name="search">Search</string>
    <string name="love">love</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
</resources>